Actualizado login files

--- a/Html/Login.html
+++ b/Html/Login.html
@@ -1,35 +1,90 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>KATALOG Login</title> 
-    </head> 
-    <body> 
-        <div class="container"> 
-            <div class="header">KATALOG</div>
-             <div class="login-box"> 
-                <div class="tabs">
-                    <div class="tab active">LOGIN</div> 
-                    <div class="tab">SIGN UP</div> 
-                </div> 
-                    <div class="input-group"> 
-                        <input type="text" placeholder="Username">
-                     </div> <div class="input-group"> 
-                        <input type="password" placeholder="Password"> 
-                    </div>
-                     <div class="checkbox-group"> 
-                        <input type="checkbox" id="remember-me">
-                         <label for="remember-me">Remember me?</label> 
-                        </div> <button class="login-button">Login</button> 
-                        <div class="forgot-password">Forgot password?</div>
-                     </div> 
-                     <div class="social-login-box"> 
-                        <button class="social-login-button">Sign in with Facebook</button>
-                         <button class="social-login-button">Sign in with Google</button> 
-                         <div class="signup-link">Need an account? <a href="#">Sign up</a>
-                </div>
-             </div> 
-         </div>
-    </body> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../CSS/Rootcolors.css">
+  <link rel="stylesheet" href="../CSS/Loginstyle.css">
+  
+  
+  <style>
+   a,
+   button,
+   input,
+   select,
+   h1,
+   h2,
+   h3,
+   h4,
+   h5,
+   * {
+       box-sizing: border-box;
+       margin: 0;
+       padding: 0;
+       border: none;
+       text-decoration: none;
+       background: none;
+   
+       -webkit-font-smoothing: antialiased;
+   }
+   
+   menu, ol, ul {
+       list-style-type: none;
+       margin: 0;
+       padding: 0;
+   }
+   </style>
+  <title>Document</title>
+</head>
+<body>
+  <div class="log-in">
+    <div class="gesture-bar">
+      <div class="handle"></div>
+    </div>
+    <div class="status-bar">
+      <img class="right-side" src="../SVG/right-side0.svg" />
+      <div class="status-bar-time">
+        <div class="_9-41">9:41</div>
+      </div>
+    </div>
+    <img class="image-6" src="../IMAGES/image-60.png" />
+    <div class="menu-item">
+  <label for="password"></label>
+  <input type="password" id="password" class="menu-item2" placeholder="Password">
+</div>
+    <div class="menu-item3">
+      <label for="menu-item2"></label>
+		<input type="username" id="username" class="menu-item2" placeholder="Username"/>
+    </div>
+    <a href="../HTML/Home.html"><div class="menu-item4">      <div class="title-item">Log in</div>    </div></a>
+    <img class="hide" src="../SVG/hide0.svg" />
+    <div class="theme-dark-options-2-selected-left">
+      <div class="atoms">
+        <div class="label">Log in</div>
+      </div>
+      <div class="atoms2">
+      <a href="../HTML/SignIn.html">  <div class="label">Sign up</div></a>
+      </div>
+    </div>
+    <div class="checkboxes">
+      <input type="checkbox" id="rememberMe">
+    </div>
+    <div class="h-frame-text">
+      <div class="v-frame">
+        <div class="remember">Remember</div>
+      </div>
+    </div>
+<a href="../ResetPassword/ResetPassword.html">    <div class="forgot-password">Forgot password?</div></a>
+<a href="../HTML/Home.html">    
+    <div class="continue-with-google-left-aligned-fixed">      
+        <div class="google-logo">        
+            <img class="logo-googleg-48-dp" src="../SVG/logo-googleg-48-dp0.svg" />   </div>    
+              <div class="continue-with-google">Continue with Google</div>    </div>   
+               <div class="continue-with-apple-left-aligned-fixed">    
+                  <img class="apple-logo" src="../SVG/apple-logo0.svg" />     
+                   <div class="continue-with-apple">Continue with Apple</div>    </div></a>
+  </div>
+  
+</body>
 </html>
