--- a/Html/Index.html
+++ b/Html/Index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katalog</title>
-    <link rel="stylesheet" href="../CSS/SplashStyle.css">
+    <link rel="stylesheet" href="../CSS/Splashstyle.css">
 </head>
 <body>
     <div class="container">
         <div class="logo"> 
-           <img src="../Images/image 1.png" alt="Slogo">
+           <img src="../IMAGES/ 1.png" alt="Slogo">
         </div>
     </div>
 </body>
