--- a/Html/Autenticacion001.html
+++ b/Html/Autenticacion001.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../CSS/Rootcolors.css">
-  <link rel="stylesheet" href="../CSS/A002style.css">
+  <link rel="stylesheet" href="../CSS/A001style.css">
   
   
   <style>
@@ -38,7 +38,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="reset-password-4">
+  <div class="reset-password-1">
     <div class="gesture-bar">
       <div class="handle"></div>
     </div>
@@ -52,21 +52,16 @@
     <div class="_6-1-table-view-row-left"></div>
     <div class="rectangle-23"></div>
     <div class="stack">
-      <div class="title">Introduce el codigo</div>
+      <div class="title">¿Tienes problemas para iniciar sesion?</div>
     </div>
-<a href="../HTML/ResetPassword.html">    <div class="menu-item">      <div class="title-item">Enviar codigo</div>    </div></a>
+<a href="../HTML/Autenticacion002.html">    <div class="menu-item">      <div class="title-item">Enviar codigo</div>    </div></a>
     <div
-      class="ingresa-tu-correo"
-    >
-      Ingresa tu correo electrónico e introduce el codigo que enviamos en el
-      enlace para que recuperes el acceso a tu cuenta.
-    </div>
-<div class="menu-item2">
-  <label for="code"></label>
-  <input type="text" id="code" class="menu-item3" placeholder="Code">
+      class="ingresa-tu-correo">Ingresa tu correo electrónico, nombre de usuario y te enviaremos un enlace para que recuperes el acceso a tu cuenta. </div>
+    <div class="menu-item2">
+  <label for="email"></label>
+  <input type="email" id="email" class="menu-item3" placeholder="Email">
 </div>
-    </div>
-    <img class="cerrar-con-llave-1" src="../IMAGES/cerrar-con-llave-10.png" />
+    <img class="cerrar-con-llave-1" src="../SVG/cerrar-con-llave-10.png" />
   </div>
   
 </body>
