--- a/Html/Home.html
+++ b/Html/Home.html
@@ -154,7 +154,8 @@
       <img class="sf-symbol-microphone" src="../SVG/sf-symbol-microphone0.svg" />
     </div>
     <div class="card-3">
-      <img class="img3" src="../SVG/img2.svg" />
+      <a href="../HTML/Post.html" class="img3">
+      <img class="img3" src="../SVG/img2.svg" /></a>
       <div class="stack6">
         <div class="adidas2">Cerrajeria</div>
         <div class="gazelle-suede2">Cerrajeria Express</div>
