--- a/Html/Login.html
+++ b/Html/Login.html
@@ -75,7 +75,7 @@
         <div class="remember">Remember</div>
       </div>
     </div>
-<a href="../ResetPassword/ResetPassword.html">    <div class="forgot-password">Forgot password?</div></a>
+<a href="../HTML/ResetPassword.html">    <div class="forgot-password">Forgot password?</div></a>
 <a href="../HTML/Home.html">    
     <div class="continue-with-google-left-aligned-fixed">      
         <div class="google-logo">        
