--- a/Html/Index.html
+++ b/Html/Index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo"> 
-           <img src="../IMAGES/ 1.png" alt="Slogo">
+           <img src="../IMAGES/image 1.png" alt="Slogo">
         </div>
     </div>
 </body>
