--- a/Html/Configuracion.html
+++ b/Html/Configuracion.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="profile">
             <img src="../SVG/icons0.svg" alt="Profile Picture">
-            <div class="edit-icon"> <img src="../IMAGES/Editarcirculo.png" alt="Editar Circulo" width="20" height="20"> </div>
+            <div class="edit-icon"> <img src="../IMAGES/Editarcirculo.png" alt="Editar Circulo"> </div>
             <h2>Fred Suarez</h2>
             <p>Frederico@gmail.com</p>
         </div>
@@ -22,7 +22,7 @@
             </div>
             <div class="setting-item">
                 <span>Ubicación</span>
-                <input type="checkbox" checked>
+                <div class="Boton"> <img src="../IMAGES/Botton.png" alt="Boton"> </div>
             </div>
             <div class="setting-item">
                 <span>Seguridad</span>
