--- a/Configuracion.html
+++ b/Configuracion.html
@@ -10,7 +10,6 @@
     <div class="container">
         <div class="profile">
             <img src="icons0.svg" alt="Profile Picture">
-            <div class="edit-icon"> <img src="Editarcirculo.png" alt="Editar Circulo"> </div>
             <h2>Fred Suarez</h2>
             <p>Frederico@gmail.com</p>
         </div>
@@ -42,11 +41,11 @@
         </div>
     </div>
     <div class="footer">
-        <div class="nav-item"><img src="icon-home0.svg" class="icon-home"></div>
+        <a href="Home.html"><div class="nav-item"><img src="icon-home0.svg" class="icon-home"></div></a>
         <div class="nav-item"><img src="message-stroke-icon0.svg" class="message-stroke-icon"></div>
-        <div class="nav-item"><img src="bell-stroke-icon0.svg" class="bell-stroke-icon"></div>
-        <div class="nav-item"><img src="icon-user0.svg" class="icon-user"></div>
-        <div class="nav-item"><img src="icons-settings0.svg" class="icons-settings"></div>
+        <a href="Notif.html"><div class="nav-item"><img src="bell-stroke-icon0.svg" class="bell-stroke-icon"></div></a>
+        <a href="Perfil.html"><div class="nav-item"><img src="icon-user0.svg" class="icon-user"></div></a>
+        <a href="Configuracion.html"><div class="nav-item"><img src="icons-settings0.svg" class="icons-settings"></div></a>
     </div>
 </body>
 </html>
