--- a/CrearPost1.html
+++ b/CrearPost1.html
@@ -32,15 +32,12 @@
    }
    </style>
 <link href="CrearPost1.css" rel="stylesheet" type="text/css">
-<title>Document</title>
+<title>Crear post 1</title>
 </head>
 <body>
   <div class="crear-post">
     <div class="status-bar">
      
-      <div class="status-bar-time">
-        <div class="_9-41"></div>
-      </div>
     </div>
     <div class="alerts">Alerts</div>
     <div class="intro">
