--- a/Home.html
+++ b/Home.html
@@ -40,9 +40,8 @@
 <body>
   <div class="home">
     <div class="status-bar">
-      <img class="right-side" src="right-side0.svg" />
       <div class="status-bar-time">
-        <div class="_9-41">9:41</div>
+        
       </div>
     </div>
     <img class="vector-7" src="vector-70.svg" />
@@ -61,7 +60,7 @@
     <div class="_3-navigation-bar">
       <div class="nav-bar-first-row">
         <div class="_3-3-navigation-bar-right">
-          <img class="icons" src="icons0.svg" />
+         <a href="Perfil.html" ><img src="icons0.svg" class="icons" ></a>
         </div>
         <div class="_3-1-navigation-bar-left">
           <div class="large-title">Inicio</div>
@@ -120,18 +119,18 @@
           <div class="stack5">
             <div class="icons2">
               <div class="div">􀑋</div>
-              <img class="bell-stroke-icon" src="bell-stroke-icon0.svg" />
+              <a href="Notif.html"><img class="bell-stroke-icon" src="bell-stroke-icon0.svg" />
             </div>
-            <div class="label2">Notificaciones</div>
+            <div class="label2">Notificaciones</div> </a>
           </div>
         </div>
         <div class="tab-item">
           <div class="stack3">
             <div class="icons2">
               <div class="div">􀑋</div>
-              <img class="icon-user" src="icon-user0.svg" />
+              <a href="Perfil.html"> <img class="icon-user" src="icon-user0.svg" />
             </div>
-            <div class="label2">Perfil</div>
+            <div class="label2">Perfil</div></a>
           </div>
         </div>
         <div class="tab-item">
