--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo"> 
-          <a href="Home.html"><img src="image 1.png" alt="Slogo"> </a> 
+          <a href="SignIn.html"><img src="image 1.png" alt="Slogo"> </a> 
         </div>
     </div>
 </body>
