--- a/Notif.html
+++ b/Notif.html
@@ -15,7 +15,7 @@
             <div class="section">
                 <h2>Hoy</h2>
                 <div class="notification">
-                    <div class="icon"><img src="humbs-up.png" alt="thumbs up" class="thumbs-up"></div>
+                    <div class="icon"><img src="Thumbs-up.png" alt="thumbs up" class="thumbs-up"></div>
                     <div class="text">
                         <p><strong>Sofia, John</strong> y <strong>+19 más</strong> les gusta tu publicación.</p>
                         <span>Hace 10 min</span>
@@ -55,11 +55,11 @@
             </div>
         </div>
         <div class="footer">
-            <div class="nav-item"><img src="icon-home0.svg" class="icon-home"></div>
+            <a href="Home.html"><div class="nav-item"><img src="icon-home0.svg" class="icon-home"></div></a>
             <div class="nav-item"><img src="message-stroke-icon0.svg" class="message-stroke-icon"></div>
-            <div class="nav-item"><img src="bell-stroke-icon0.svg" class="bell-stroke-icon"></div>
-            <div class="nav-item"><img src="icon-user0.svg" class="icon-user"></div>
-            <div class="nav-item"><img src="icons-settings0.svg" class="icons-settings"></div>
+            <a href="Notif.html"><div class="nav-item"><img src="bell-stroke-icon0.svg" class="bell-stroke-icon"></div></a>
+            <a href="Perfil.html"><div class="nav-item"><img src="icon-user0.svg" class="icon-user"></div></a>
+            <a href="Configuracion.html"><div class="nav-item"><img src="icons-settings0.svg" class="icons-settings"></div></a>
         </div>
     </div>
 </body>
