--- a/Perfil.html
+++ b/Perfil.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>perfil</title>
 <link href="Perfil.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -24,7 +24,7 @@
         <div class="liked">Liked</div>
         <div class="tagged">Tagged</div>
       </div>
-      <img class="divider" src="../SVG/Tabbar.svg" />
+      <img class="divider" src="Tabbar.svg" />
     </div>
     <div class="fred-suarez">Fred Suarez</div>
     <div class="san-pedro-sula-cortes">San Pedro Sula, Cortes</div>
@@ -34,16 +34,16 @@
         background: url(../../../autohtml-project%20(10)/profile-banner0.png) center;
         background-size: cover;
         background-repeat: no-repeat;
-      "
+      
       </style> 
     </div>
-      <img src="../Images/profile-banner0.png" alt=""/>
+      <img src="profile-banner0.png" alt=""/>
       <div class="message">
-        <img class="icon-message" src="../SVG/icon-message0.svg" />
+        <img class="icon-message" src="icon-message0.svg" />
         <div class="ellipse-10"></div>
       </div>
       <div class="message2">
-        <img class="icon-bookmark" src="../SVG/icon-bookmark0.svg" />
+        <img class="icon-bookmark" src="icon-bookmark0.svg" />
       </div>
     </div>
     <div class="photo">
@@ -56,7 +56,7 @@
           background-repeat: no-repeat;
         "
       
-        <img class="ellipse-2" src="../Images/ellipse-20.png" />
+        <img class="ellipse-2" src="ellipse-20.png" />
       </div>
     </div>
     <div class="bars-status-bar-i-phone-light">
@@ -231,8 +231,8 @@
         </div>
         <div class="label">Home</div>
       </div>
-      <img class="gradient-gradient-02" src="../SVG/gradient-gradient-020.svg" />
-      <img class="icon-plus" src="../SVG/Plus.svg" />
+      <img class="gradient-gradient-02" src="gradient-gradient-020.svg" />
+      <img class="icon-plus" src="Plus.svg" />
     </div>
   </div>
   
