--- a/SignIn.html
+++ b/SignIn.html
@@ -35,7 +35,7 @@
        padding: 0;
    }
    </style>
-  <title>Document</title>
+  <title>Sign in</title>
 </head>
 <body>
   <div class="sign-in">
@@ -43,9 +43,7 @@
       <div class="handle"></div>
     </div>
     <div class="status-bar">
-      <img class="right-side" src="right-side0.svg" />
-      <div class="status-bar-time">
-        <div class="_9-41">9:41</div>
+
       </div>
     </div>
     <img class="image-6" src="image-60.png" />
@@ -74,7 +72,7 @@
       <a href="LogIn.html"><div class="atoms2">        <div class="label">Log in</div></a>
       </div>
     </div>
-<a href="Home.html">    <div class="continue-with-google-left-aligned-fixed">     
+<a href="https://myaccount.google.com/intro/signing-in-to-google">    <div class="continue-with-google-left-aligned-fixed">     
    <div class="google-logo">        
     <img class="logo-googleg-48-dp" src="logo-googleg-48-dp0.svg" /> </div>     
     <div class="continue-with-google">Continue with Google</div>    </div>    
