--- a/CrearPost3.html
+++ b/CrearPost3.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
-<link href="../CSS/CrearPost3.css" rel="stylesheet" type="text/css">
+<link href="CrearPost3.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="crear-post-4">
@@ -58,6 +58,5 @@
     <div class="recents2">Recents</div>
     <div class="next">Next</div>
   </div>
-  
 </body>
 </html>
