--- a/ResetPassword.html
+++ b/ResetPassword.html
@@ -35,7 +35,7 @@
        padding: 0;
    }
    </style>
-  <title>Document</title>
+  <title>resetpassword</title>
 </head>
 <body>
   <div class="reset-password">
