--- a/SignIn.html
+++ b/SignIn.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Rootcolors.css">
   <link rel="stylesheet" href="Signinstyle.css">
+  <link rel="manifest" href="manifest.json">
   
   
   <style>
@@ -69,7 +70,7 @@
       <div class="atoms">
         <div class="label">Sign up</div>
       </div>
-      <a href="LogIn.html"><div class="atoms2">        <div class="label">Log in</div></a>
+      <a href="Login.html"><div class="atoms2">   <div class="label">Log in</div></a>
       </div>
     </div>
 <a href="https://myaccount.google.com/intro/signing-in-to-google">    <div class="continue-with-google-left-aligned-fixed">     
