--- a/Autenticacion002.html
+++ b/Autenticacion002.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Rootcolors.css">
   <link rel="stylesheet" href="A002style.css">
-  
+  <link rel="manifest" href="manifest.json">
   
   <style>
    a,
