--- a/Configuracion.html
+++ b/Configuracion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuraciones</title>
     <link rel="stylesheet" href="Configstyle.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="container">
