--- a/CrearPost2.html
+++ b/CrearPost2.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link href="CrearPost2.css" rel="stylesheet" type="text/css">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="crear-post">
