--- a/Post.html
+++ b/Post.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
     <link rel="stylesheet" href="Poststyle.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="home">
