--- a/CrearPost1.html
+++ b/CrearPost1.html
@@ -46,7 +46,7 @@
         <div class="publish2">Publish</div>
       </div>
       <div class="create">Create</div>
-      <div class="discard">Discard</div>
+    <a href="Perfil.html">  <div class="discard">Discard</div></a>
     </div>
     <div class="what-s-on-your-mind">What’s on your mind?</div>
     <div
@@ -59,9 +59,7 @@
     >
       <img class="ellipse-2" src="ellipse-20.png" />
     </div>
-    <div class="add">
-      <img class="icon-plus" src="Plus.svg" />
-    </div>
+    <a href="CrearPost2.html"><div class="add">      <img class="icon-plus" src="Plus.svg" />    </div></a>
     <div class="cursor"></div>
   
         
