--- a/CrearPost2.html
+++ b/CrearPost2.html
@@ -21,7 +21,7 @@
         <div class="publish2">Publish</div>
       </div>
       <div class="create">Create</div>
-      <div class="discard">Discard</div>
+     <a href="CrearPost1.html"> <div class="discard">Discard</div></a>
     </div>
     <div class="what-s-on-your-mind">What’s on your mind?</div>
     <div
@@ -43,17 +43,15 @@
         <img class="ellipse-2" src="ellipse-20.png" />
       </div>
         </div>
-      </div>
-    </div>
+   
+    
     <div class="tabs">
-      <img class="icon-image" src="Image.svg" />
+      <a href="CrearPost3.html"><img class="icon-image" src="Image.svg" /></a>
       <img class="icon-gif" src="GIF.svg" />
       <img class="icon-camera" src="Camera.svg" />
       <img class="icon-attachment" src="Attachment.svg" />
     </div>
-    <div class="close">
-      <img class="icon-close" src="icon-close0.svg" />
-    </div>
+    <a href="CrearPost1.html"><div class="close">      <img class="icon-close" src="icon-close0.svg" />    </div></a>
   </div>
   
 </body>
