--- a/CrearPost3.html
+++ b/CrearPost3.html
@@ -55,9 +55,9 @@
       <div class="select-multiple2">Select multiple</div>
       <img class="icon" src="icon0.svg" />
     </div>
-    <div class="cancel">Cancel</div>
+    <a href="CrearPost2.html"><div class="cancel">Cancel</div></a>
     <div class="recents2">Recents</div>
-    <div class="next">Next</div>
+    <a href="Perfil.html"><div class="next">Next</div></a>
   </div>
 </body>
 </html>
