--- a/Perfil.html
+++ b/Perfil.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link href="Perfil.css" rel="stylesheet" type="text/css">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="perfil">
@@ -50,7 +51,7 @@
       <div
         class="profile-photo"
         style="
-          background: url(../../../autohtml-project%20(10)/profile-photo0.png) center;
+          background: center;
           background-size: cover;
           background-repeat: no-repeat;
         "
