--- a/Home.html
+++ b/Home.html
@@ -100,7 +100,7 @@
 <li> <a href="Notif.html"> <div class="nav-item"><img src="bell-stroke-icon0.svg" class="bell-stroke-icon"></div></a> </li>
 				
 		    <li>
-	   <a href="CrearPost.html"> <div class="nav-item"><img src="Group 25.svg" class="photo-icon"></div><a>
+	   <a href="CrearPost1.html"> <div class="nav-item"><img src="Group 25.svg" class="photo-icon"></div><a>
 				 </li>
 		    <li>
             <a href="Perfil.html"> <div class="nav-item"><img src="icon-user0.svg" class="icon-user"></div> </a>
